--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/.idea/country-hook-part7.iml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
